--- a/modules/_mylinearalgebra/gauss_method/CMakeLists.txt
+++ b/modules/_mylinearalgebra/gauss_method/CMakeLists.txt
@@ -1,8 +1,4 @@
-cmake_minimum_required(VERSION 3.19)
-
 project(gauss_method)
-
-message(${CMAKE_CONFIGURATION_TYPES})
 
 set(PROJECT_SOURCES
     src/main.cpp
@@ -12,9 +8,12 @@ add_executable(${PROJECT_NAME}
     ${PROJECT_SOURCES}
     )
 
-if (${CMAKE_CONFIGURATION_TYPES} STREQUAL "Debug")
-	target_compile_options(${PROJECT_NAME} PUBLIC /MTd)
-else()
-	target_compile_options(${PROJECT_NAME} PUBLIC /MT)
-endif()
-target_compile_options(${PROJECT_NAME} PRIVATE /Qpar /Qpar-report:1 /Qvec-report:1)
+if(WIN32)
+    message(STATUS "CMAKE_CONFIGURATION_TYPES: ${CMAKE_CONFIGURATION_TYPES}")
+    if (${CMAKE_CONFIGURATION_TYPES} STREQUAL "Debug")
+        target_compile_options(${PROJECT_NAME} PUBLIC /MTd)
+    else()
+        target_compile_options(${PROJECT_NAME} PUBLIC /MT)
+    endif()
+    target_compile_options(${PROJECT_NAME} PRIVATE /Qpar /Qpar-report:1 /Qvec-report:1)
+endif(WIN32)
