virtual refactoring incomplete

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ endif()
 # add_subdirectory(modules/_recursion)
 # add_subdirectory(modules/_file_io)
 # add_subdirectory(modules/_polymorphism)
-# add_subdirectory(modules/_virtual)
+add_subdirectory(modules/_virtual)
 # add_subdirectory(modules/_containers)
 # add_subdirectory(modules/_lambda)
 # add_subdirectory(modules/_move-semantic)
