--- a/modules/_virtual/CMakeLists.txt
+++ b/modules/_virtual/CMakeLists.txt
@@ -1,3 +1,3 @@
 set(PROPERTY_FOLDER "_virtual")
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/clock_inheritance)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/virtual_method)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/virtual_inheritance)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/virtual_method_from_constructor)
