--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ add_subdirectory(modules/dynamic_cast)
 # add_subdirectory(modules/assert)
 # add_subdirectory(modules/atomic)
 # add_subdirectory(modules/auto-type)
-# add_subdirectory(modules/arithmetic_type_conversion)
+add_subdirectory(modules/arithmetic_type_conversion)
 # add_subdirectory(modules/brute_force)
 # add_subdirectory(modules/constexpr)
 # add_subdirectory(modules/chrono)
