--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,12 +105,12 @@ add_subdirectory(modules/_mylinearalgebra)
 # add_subdirectory(modules/_stl_re-implementation)
 
 # add_subdirectory(modules/base_conversion)
-# add_subdirectory(modules/dynamic_cast)
+add_subdirectory(modules/dynamic_cast)
 # add_subdirectory(modules/atexit)
 # add_subdirectory(modules/assert)
 # add_subdirectory(modules/atomic)
 # add_subdirectory(modules/auto-type)
-# add_subdirectory(modules/arithmetic_type_conversion)
+add_subdirectory(modules/arithmetic_type_conversion)
 # add_subdirectory(modules/brute_force)
 # add_subdirectory(modules/constexpr)
 # add_subdirectory(modules/chrono)
